# dpmaster-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  dpmaster.nix  shell.nix
.github/workflows/: pages.yml
dpmaster-codec/: Cargo.toml
dpmaster-codec/src/: lib.rs
dpmaster-game-client-bin/: Cargo.toml
dpmaster-game-client-bin/src/: main.rs
dpmaster-proto/: Cargo.toml  README.md
dpmaster-proto/assets/: message-flow-getservers.mermaid  message-flow-heartbeat.mermaid
dpmaster-proto/fuzz/: Cargo.toml
dpmaster-proto/fuzz/dictionaries/: getinfo  getservers  getservers_response  heartbeat  info_response
dpmaster-proto/fuzz/fuzz_targets/: getinfo.rs  getservers.rs  getservers_response.rs  heartbeat.rs  info_response.rs
dpmaster-proto/src/: deserializer.rs  error.rs  lib.rs  messages.rs  serializer.rs
dpmaster-proto/tests/getinfo/: main.rs
nix/: rust.nix  sources.json
src/: deserializer.rs  lib.rs  messages.rs  serializer.rs
