[package]
name = "dpmaster-codec"
version = "0.1.0"
authors = ["robot9001 <robo9k@symlink.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpmaster-proto = { version = "0.1.0", path = "../dpmaster-proto" }
tokio-util = { version = "0.6.0", features = ["codec"] }
bytes = "1.0.0"
cookie-factory = "0.3.1"