[package]
name = "dpmaster-game-client-bin"
version = "0.1.0"
authors = ["robot9001 <robo9k@symlink.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dpmaster-proto = { version = "0.1.0", path = "../dpmaster-proto" }
dpmaster-codec = { version = "0.1.0", path = "../dpmaster-codec" }
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.6.0", features = ["codec", "net"] }
futures = "0.3.8"
tokio-stream = "0.1.0"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.5"
eyre = "0.6"
tracing = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"