[package]
name = "dpmaster-proto"
version = "0.1.0"
authors = ["robot9001 <robo9k@symlink.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie-factory = "0.3.1"
nom = "6.0.1"
thiserror = "1.0"
memchr = "2.3.4"